#34 Update AutoscalingZero module
