# pb/fxgateway.swagger.json
@@ -181,6 +181,32 @@
         ]
       }
     },
+    "/system/scale": {
+      "post": {
+        "operationId": "Scale",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/pbMessage"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/pbScaleRequest"
+            }
+          }
+        ],
+        "tags": [
+          "FxGateway"
+        ]
+      }
+    },
     "/system/scale-function": {
       "put": {
         "operationId": "ReplicaUpdate",
@@ -332,6 +358,21 @@
       "properties": {
         "Msg": {
           "type": "string"
+        }
+      }
+    },
+    "pbScaleRequest": {
+      "type": "object",
+      "properties": {
+        "NameSpace": {
+          "type": "string"
+        },
+        "FunctionName": {
+          "type": "string"
+        },
+        "Replicas": {
+          "type": "string",
+          "format": "uint64"
         }
       }
     },
